@@ -136,7 +136,7 @@ public class PigEntity extends TemperatureVariantAnimal implements Tickable, Cli
     }
 
     private @Nullable PlayerEntity getPlayerPassenger() {
-        if (getFlag(EntityFlag.SADDLED) && !passengers.isEmpty() && passengers.get(0) instanceof PlayerEntity playerEntity) {
+        if (getFlag(EntityFlag.SADDLED) && !passengers.isEmpty() && passengers.getFirst() instanceof PlayerEntity playerEntity) {
             return playerEntity;
         }
 
